Initial attempt to support sa based sync
